Fix: Complete index.html with all JavaScript

--- a/index.html
+++ b/index.html
@@ -1497,7 +1497,7 @@
               </div>
               <div class="contact-details">
                 <h4>EMAIL</h4>
-                <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="9ee4ebf2f8f7efffecdefbe6fff3eef2fbb0fdf1f3">[email&#160;protected]</a></p>
+                <p>zulfiqar@example.com</p>
               </div>
             </div>
 
@@ -1580,7 +1580,7 @@
     <p style="opacity: 0.7;">// Built with Next.js, TypeScript, and hacker aesthetics</p>
   </div>
 
-  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+  <script>
     // ============================================
     // MATRIX BACKGROUND ANIMATION
     // ============================================
@@ -2023,4 +2023,11 @@ STATUS: ONLINE`,
       }
     });
 
-    // Contact
+    // Contact form submission
+    document.getElementById('contactForm')?.addEventListener('submit', (e) => {
+      e.preventDefault();
+      alert('Message sent! (Demo mode - form not actually submitted)');
+    });
+  </script>
+</body>
+</html>
